[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/images/stages/mall/bgWalls.png" type="Texture" id=1]
[ext_resource path="res://assets/images/stages/mall/upperBop.res" type="SpriteFrames" id=2]
[ext_resource path="res://assets/images/stages/mall/bgEscalator.png" type="Texture" id=3]
[ext_resource path="res://assets/images/stages/mall/christmasTree.png" type="Texture" id=4]
[ext_resource path="res://assets/images/stages/mall/bottomBop.res" type="SpriteFrames" id=5]
[ext_resource path="res://assets/images/stages/mall/fgSnow.png" type="Texture" id=6]
[ext_resource path="res://assets/images/stages/mall/santa.res" type="SpriteFrames" id=7]
[ext_resource path="res://scenes/stages/mall.gd" type="Script" id=8]

[node name="mall" type="Node2D"]
script = ExtResource( 8 )
defaultCamZoom = 0.7

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="layer1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 0.2 )
motion_offset = Vector2( -512, -288 )

[node name="BgWalls" type="Sprite" parent="ParallaxBackground/layer1"]
position = Vector2( -1000, -500 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
centered = false

[node name="layer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.33, 0.33 )
motion_offset = Vector2( -428.8, -241.2 )

[node name="UpperBop" type="AnimatedSprite" parent="ParallaxBackground/layer2"]
position = Vector2( -240, -90 )
scale = Vector2( 0.85, 0.85 )
frames = ExtResource( 2 )
animation = "Upper Crowd Bob"
centered = false

[node name="layer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 0.3 )
motion_offset = Vector2( -448, -252 )

[node name="BgEscalator" type="Sprite" parent="ParallaxBackground/layer3"]
position = Vector2( -1100, -600 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )
centered = false

[node name="layer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.4, 0.4 )
motion_offset = Vector2( -384, -216 )

[node name="ChristmasTree" type="Sprite" parent="ParallaxBackground/layer4"]
position = Vector2( 370, -250 )
texture = ExtResource( 4 )
centered = false

[node name="layer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.9, 0.9 )
motion_offset = Vector2( -64, -36 )

[node name="BottomBop" type="AnimatedSprite" parent="ParallaxBackground/layer5"]
position = Vector2( -300, 140 )
frames = ExtResource( 5 )
animation = "Bottom Level Boppers"
centered = false

[node name="FGSnow" type="Sprite" parent="."]
position = Vector2( -600, 700 )
texture = ExtResource( 6 )
centered = false

[node name="Santa" type="AnimatedSprite" parent="."]
position = Vector2( -840, 150 )
frames = ExtResource( 7 )
animation = "santa idle in fear"
centered = false

[node name="dadPos" type="Node2D" parent="."]
position = Vector2( 100, 100 )

[node name="gfPos" type="Node2D" parent="."]
position = Vector2( 400, 130 )

[node name="bfPos" type="Node2D" parent="."]
position = Vector2( 970, 100 )
